--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/aleja/OneDrive - Universidad de los andes/Escritorio/json-20240303.jar"/>
+	<classpathentry kind="lib" path="/Taller3_AerolineaEsqueleto/lib/org.json-1.6-20240205.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
