--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/aleja/OneDrive - Universidad de los andes/Escritorio/json-20240303.jar"/>
-	<classpathentry kind="lib" path="/Taller3_AerolineaEsqueleto/lib/org.json-1.6-20240205.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/aleja/OneDrive - Universidad de los andes/Escritorio/json-20240303.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Taller3_AerolineaEsqueleto/lib/org.json-1.6-20240205.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
