--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/aleja/OneDrive - Universidad de los andes/Escritorio/json-20240303.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Taller3_AerolineaEsqueleto/lib/org.json-1.6-20240205.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-20240303.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
