--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,6 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/json-20240303.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/json-20240303.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
